# mpv-shelf

./: .env  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
lib/: app-window.ts  cached-page-schema.ts  prisma-commands.ts
lib/hooks/: name-from-path.tsx
lib/prisma-commands/: misc-cmds.ts
lib/prisma-commands/folders/: folder-cmds.ts
lib/prisma-commands/global/: global-cmds.ts
lib/prisma-commands/settings/: setting-cmds.ts
lib/prisma-commands/user/: user-cmds.ts
lib/prisma-commands/videos/: video-cmds.ts
prisma/: dev.db  schema.prisma
prisma/migrations/20240214030353_init/: migration.sql
prisma/migrations/20240214031349_pin/: migration.sql
prisma/migrations/20240214031714_pin/: migration.sql
prisma/migrations/20240214034839_pin/: migration.sql
prisma/migrations/20240215021411_folder/: migration.sql
prisma/migrations/20240215224119_video/: migration.sql
prisma/migrations/20240215231610_remove_videoto_folder/: migration.sql
prisma/migrations/20240217202952_add_image/: migration.sql
prisma/migrations/20240218082033_global/: migration.sql
prisma/migrations/20240218195535_image/: migration.sql
prisma/migrations/20240220085635_user/: migration.sql
prisma/migrations/20240222053631_format/: migration.sql
prisma/migrations/20240223113324_0_2_0/: migration.sql
prisma/migrations/20240223113814_0_2_0/: migration.sql
prisma/migrations/20240223133344_0_2_0/: migration.sql
prisma/migrations/20240223155535_0_2_0/: migration.sql
prisma/migrations/20240224124513_as_child/: migration.sql
prisma/migrations/20240225032701_add_color_to_folder/: migration.sql
prisma/migrations/20240225052808_add_watched_at_to_video/: migration.sql
prisma/migrations/20240225052903_add_watched_at_to_video/: migration.sql
src-tauri/: Cargo.toml  mal.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  errors.rs  main.rs  mal.rs  misc.rs  mpv.rs  stats.rs  tray.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/_main-components/: main-components.tsx  mode-toggle.tsx  reset-user-on-load.tsx
src/app/_main-components/_icon_components/: dyn-custom-icon.tsx  dyn-text-size-span.tsx  eye-icon.tsx  eye-off-icon.tsx
src/app/dashboard/: page.tsx
src/app/dashboard/_components/: folder-list.tsx  folder_contex_menu_content.tsx  footer.tsx  parent-title-and-tags.tsx  parentTrashcan.tsx  trashcan.tsx  video-file.tsx
src/app/dashboard/_components/_video-files/: rename-section.tsx  video-context-menu.tsx  video-file.tsx
src/app/home/: page.tsx
src/app/login/: page.tsx
src/app/profiles/: page.tsx
src/app/profiles/_components/: user-avatar.tsx
src/app/profiles/newUser/: page.tsx
src/app/settings/: page.tsx
src/app/settings/_components/: confirm.tsx  save-changes-button.tsx
src/app/stats/: page.tsx
src/app/stats/_components/: main-stats.tsx  manga-card.tsx
src/components/ui/: button.tsx  input-otp.tsx  toast.tsx
(+16 files in other folders)
