[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-native-tls"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.0", features = [
    "window-all",
    "global-shortcut-all",
    "fs-create-dir",
    "fs-exists",
    "fs-read-file",
    "fs-read-dir",
    "fs-rename-file",
    "protocol-all",
    "clipboard-write-text",
    "path-all",
    "shell-execute",
    "dialog-all",
    "system-tray",
] }
open = { version = "5.0.1" }
random_color = { version = "0.8.0" }
sysinfo = { version = "0.30.5" }
tokio = { version = "1.36.0" }
mal-api = { version = "2.0.0" }
# dotenvy = { version = "0.15.7" }
# env-file-reader = { version = "0.3.0" }

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"
features = ["sqlite"]

# [dependencies.tauri-plugin-oauth]
# git = "https://github.com/FabianLars/tauri-plugin-oauth"
# branch = "main"

[profile.dev.package.sqlx-macros]
opt-level = 3

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
